<resources>
    <string name="app_name">Ni-Khoj</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search Here.....</string>
    <string name="nodata">No Data</string>
    <string name="username">Username</string>
    <string name="date_hint">DD:MM:YYYY</string>
    <string name="location_hint">2nd Floor, House 12, Road 2/3, Block F, Chairman Bari (Panir Pump - 6)</string>
    <string name="description_hint">Pathao; is a Bangladeshi on-demand digital platform and transportation network company headquartered in Dhaka, Bangladesh. The company operates in three cities of Bangladesh: Dhaka, Chittagong, Sylhet, and in Kathmandu, Nepal.</string>
    <string name="dummy_description_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="dummy_description_2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</string>
    <string name="dummy_description_3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable.</string>
    <string name="dummy_description_4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia</string>
    <string name="dummy_description_5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_description_6">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="likes_count">00</string>
    <string name="comments_count">00</string>
    <string name="share">Share</string>
    <string name="add_to_your_post">Add to your post</string>
    <string name="add_description">Add description</string>
    <string name="add_images">Add images</string>
    <string name="tap_here">Tap Here</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="refer_a_friend_hint">Enter user mail</string>
    <string name="referred_user">Referred user</string>
    <string name="post">Post</string>
    <string name="location_name_hint">Enter location name</string>
    <string name="location_name">Location name</string>
    <string name="address">Address</string>
    <string name="distance_in_miles">2.8 Miles</string>
</resources>
