<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="4dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:elevation="12dp"
        app:cardBackgroundColor="@color/md_white_1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/md_grey_800"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="4dp"
                android:gravity="center|left"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/PostDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:drawableLeft="@drawable/ic_date_range"
                android:drawablePadding="4dp"
                android:gravity="center|left"
                android:textColor="@color/md_grey_800"
                android:text="@string/date_hint"/>

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_dummy_image"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:drawableLeft="@drawable/ic_description"
                android:drawablePadding="4dp"
                android:gravity="center|left"
                android:text="@string/description_hint"
                android:textColor="@color/md_grey_800"/>

            <TextView
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="4dp"
                android:gravity="center|left"
                android:textColor="@color/md_grey_800"
                android:text="@string/location_hint"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>