<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="4dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:translationZ="2dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/md_white_1000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/itemIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_location"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <TextView
                    android:id="@+id/LocationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_name"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/md_grey_800"/>

                <TextView
                    android:id="@+id/Address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_800"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/Distance"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/distance_in_miles"
                android:textSize="14sp"
                android:textColor="@color/md_grey_800"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_gravity="center"
                android:gravity="center|left"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
